results/SVCOMP/4-shot/log-ExSymExe11-2024_03_18_17_28_58.txt
class Main {
  static /*@ spec_public @*/ int field;

  //@ requires arg >= 0;
  //@ ensures \result ==> this.test(3, arg % 100);
  //@ ensures !\result ==> arg < 0;
  public static boolean f(int arg) {
    if (arg < 0)
      return true;
    int x = 3;
    Main inst = new Main();
    field = arg % 100;
    return inst.test(x, field);
  }
  
  //@ requires true;
  //@ ensures \result ==> (z <= 0 && y > 0);
  //@ ensures !\result ==> (z > 0 || y <= 0);
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe11");
    int y = 3;
    z = -x;
    x = z * x;
    if (z <= 0) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (y <= 0) {
      System.out.println("branch BOO1");
      return false;
    } else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe11.java:5: error: non-static variable this cannot be referenced from a static context
  //@ ensures \result ==> this.test(3, arg % 100);
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe11.java:17: error: cannot find symbol
  //@ ensures \result ==> (z <= 0 && y > 0);
                                     ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe11.java:18: error: cannot find symbol
  //@ ensures !\result ==> (z > 0 || y <= 0);
                                     ^
  symbol:   variable y
  location: class Main
3 errors

